syntax = "proto3";

package rivet.backend.pkg.db.msg.create;

import "proto/common.proto";
import "proto/backend/db.proto";

/// name = "msg-db-create"
/// parameters = [
/// 	{ name = "database_id" },
/// ]
message Message {
	rivet.common.Uuid database_id = 1;
	rivet.common.Uuid owner_team_id = 2;
	string name_id = 3;
}

